--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,15 +2,64 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <title>
+            {% block title %}
+                Bienvenue !
+            {% endblock %}
+        </title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">        
         {% block stylesheets %}
         {% endblock %}
-
-        {% block javascripts %}
-        {% endblock %}
+        
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {#navbar#}
+        {%block navbar%}
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
+              <div class="container-fluid">
+                <a class="navbar-brand" href="/accueil">Kine Lib</a>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="/accueil">Accueil</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/priserendezvous">Prendre Rendez-Vous</a>
+                    </li>
+                      <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="/mesrendezvous">Mes Rendez-Vous</a></li>
+                      </ul>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/profile">Mon Profil</a>
+                    </li>
+                    
+                </div>
+              </div>
+            </nav>
+        {%endblock%}
+
+        {#slider#}
+        {%block slider%}
+
+        {%endblock%}
+
+        {#contenue#}
+        {% block content %}
+
+        {% endblock %}
+
+        {#footer#}
+        {%block footer%}
+            <footer class="mt-5 bg-light py-5 text-center">
+                <p>Copyright © 2023 KineLib</p>
+            </footer>
+        {%endblock%}
+
+        {#référence les javascripts#}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"</script>
+
     </body>
+        {% block javascripts %}
+        
+        {% endblock %}
 </html>
